--- a/MoviesApp/MoviesApp/Screens/Cells/Home/View/HomeScreenEnlargedCell.xib
+++ b/MoviesApp/MoviesApp/Screens/Cells/Home/View/HomeScreenEnlargedCell.xib
@@ -27,15 +27,15 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kVb-cc-75v">
-                                <rect key="frame" x="16.000000000000014" y="10" width="254.33333333333337" height="452"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <rect key="frame" x="16" y="10" width="301.33333333333331" height="452"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="kVb-cc-75v" secondAttribute="height" multiplier="9:16" id="okA-BP-Jdm"/>
+                                    <constraint firstAttribute="width" secondItem="kVb-cc-75v" secondAttribute="height" multiplier="2:3" id="okA-BP-Jdm"/>
                                     <constraint firstAttribute="width" constant="100" id="ovU-E1-QMA"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cV0-3t-8nA" userLabel="Information Container View">
-                                <rect key="frame" x="290.33333333333326" y="179" width="404.66666666666674" height="114.33333333333331"/>
+                                <rect key="frame" x="337.33333333333326" y="179" width="357.66666666666674" height="114.33333333333331"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="GeY-aI-q7k" userLabel="Title Stack View">
                                         <rect key="frame" x="0.0" y="10" width="95.666666666666671" height="24"/>
@@ -78,7 +78,7 @@
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFK-o8-2XY">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFK-o8-2XY">
                                         <rect key="frame" x="0.0" y="96.333333333333314" width="230" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="230" id="DId-0X-K1F"/>
@@ -151,9 +151,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
