--- a/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
+++ b/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
@@ -76,7 +76,7 @@
                                     <color key="textColor" systemColor="secondaryLabelColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="equalCentering" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AgE-qS-WJw" userLabel="Genres Stack View">
+                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AgE-qS-WJw" userLabel="Genres Stack View">
                                     <rect key="frame" x="16" y="555" width="361" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="8F7-wr-xKR"/>
