--- a/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
+++ b/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
@@ -27,10 +27,10 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aOz-pK-GEV">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aOz-pK-GEV">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="47p-qh-nLo" userLabel="Container View">
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="47p-qh-nLo" userLabel="Container View">
                             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I2f-Fg-VtO">
@@ -47,45 +47,45 @@
                                         <constraint firstAttribute="height" constant="1" id="IOE-5b-7P8"/>
                                     </constraints>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUs-3m-HdC" userLabel="Title Label">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUs-3m-HdC" userLabel="Title Label">
                                     <rect key="frame" x="16" y="515" width="62" height="30"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AgE-qS-WJw" userLabel="Genres Stack View">
-                                    <rect key="frame" x="16" y="595" width="361" height="40"/>
+                                    <rect key="frame" x="16" y="576" width="361" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="8F7-wr-xKR"/>
                                     </constraints>
                                 </stackView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="TUf-cT-ecW" userLabel="Star Image View">
-                                    <rect key="frame" x="16" y="645" width="25" height="25"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="TUf-cT-ecW" userLabel="Star Image View">
+                                    <rect key="frame" x="16" y="626" width="25" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="25" id="Gns-UE-HDS"/>
                                         <constraint firstAttribute="width" secondItem="TUf-cT-ecW" secondAttribute="height" id="zE6-qm-MTY"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYv-ae-9F5" userLabel="Rating Label">
-                                    <rect key="frame" x="46" y="647" width="42" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYv-ae-9F5" userLabel="Rating Label">
+                                    <rect key="frame" x="46" y="628" width="42" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0n-ql-1gj" userLabel="Release Date Label">
-                                    <rect key="frame" x="118" y="647" width="42" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0n-ql-1gj" userLabel="Release Date Label">
+                                    <rect key="frame" x="118" y="628" width="42" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" systemColor="secondaryLabelColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Meq-GF-9qZ" userLabel="Overview Label">
-                                    <rect key="frame" x="16.000000000000004" y="690" width="41.333333333333343" height="146"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Meq-GF-9qZ" userLabel="Overview Label">
+                                    <rect key="frame" x="16.000000000000004" y="671" width="41.333333333333343" height="20.333333333333371"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" systemColor="secondaryLabelColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BdQ-z3-DGS" userLabel="Original Title Label">
-                                    <rect key="frame" x="16" y="553" width="48" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BdQ-z3-DGS" userLabel="Original Title Label">
+                                    <rect key="frame" x="16" y="545" width="48" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="MKD-JD-JU5"/>
                                     </constraints>
@@ -99,7 +99,7 @@
                             <constraints>
                                 <constraint firstItem="Meq-GF-9qZ" firstAttribute="top" secondItem="TUf-cT-ecW" secondAttribute="bottom" constant="20" id="0DB-xw-5xl"/>
                                 <constraint firstItem="gvi-P9-eMA" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oUs-3m-HdC" secondAttribute="trailing" constant="16" id="6Cs-8d-RHp"/>
-                                <constraint firstAttribute="bottom" secondItem="Meq-GF-9qZ" secondAttribute="bottom" constant="16" id="89g-eR-YyI"/>
+                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Meq-GF-9qZ" secondAttribute="bottom" constant="16" id="89g-eR-YyI"/>
                                 <constraint firstItem="e0n-ql-1gj" firstAttribute="leading" secondItem="gYv-ae-9F5" secondAttribute="trailing" constant="30" id="Exj-e9-HbM"/>
                                 <constraint firstItem="I2f-Fg-VtO" firstAttribute="width" secondItem="47p-qh-nLo" secondAttribute="width" multiplier="0.7" id="JJ3-au-ZcE"/>
                                 <constraint firstItem="kAv-pa-7CA" firstAttribute="leading" secondItem="47p-qh-nLo" secondAttribute="leading" constant="16" id="LJ1-wv-5c8"/>
