--- a/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
+++ b/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
@@ -41,51 +41,51 @@
                                     </constraints>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAv-pa-7CA" userLabel="Separator View">
-                                    <rect key="frame" x="16" y="504" width="361" height="1"/>
+                                    <rect key="frame" x="16" y="501.66666666666669" width="361" height="1"/>
                                     <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="IOE-5b-7P8"/>
                                     </constraints>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUs-3m-HdC" userLabel="Title Label">
-                                    <rect key="frame" x="16" y="515" width="62" height="30"/>
+                                    <rect key="frame" x="16" y="512.66666666666663" width="62" height="30"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AgE-qS-WJw" userLabel="Genres Stack View">
-                                    <rect key="frame" x="16" y="576" width="361" height="40"/>
+                                    <rect key="frame" x="16" y="573.66666666666663" width="361" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="8F7-wr-xKR"/>
                                     </constraints>
                                 </stackView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="TUf-cT-ecW" userLabel="Star Image View">
-                                    <rect key="frame" x="16" y="626" width="25" height="25"/>
+                                    <rect key="frame" x="16" y="623.66666666666663" width="25" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="25" id="Gns-UE-HDS"/>
                                         <constraint firstAttribute="width" secondItem="TUf-cT-ecW" secondAttribute="height" id="zE6-qm-MTY"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYv-ae-9F5" userLabel="Rating Label">
-                                    <rect key="frame" x="46" y="628" width="42" height="21"/>
+                                    <rect key="frame" x="46" y="625.66666666666663" width="42" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0n-ql-1gj" userLabel="Release Date Label">
-                                    <rect key="frame" x="118" y="628" width="42" height="21"/>
+                                    <rect key="frame" x="118" y="625.66666666666663" width="42" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" systemColor="secondaryLabelColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Meq-GF-9qZ" userLabel="Overview Label">
-                                    <rect key="frame" x="16.000000000000004" y="671" width="41.333333333333343" height="20.333333333333371"/>
+                                    <rect key="frame" x="16.000000000000004" y="668.66666666666663" width="41.333333333333343" height="20.333333333333371"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" systemColor="secondaryLabelColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BdQ-z3-DGS" userLabel="Original Title Label">
-                                    <rect key="frame" x="16" y="545" width="48" height="21"/>
+                                    <rect key="frame" x="16" y="542.66666666666663" width="48" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="MKD-JD-JU5"/>
                                     </constraints>
@@ -112,7 +112,7 @@
                                 <constraint firstItem="oUs-3m-HdC" firstAttribute="top" secondItem="kAv-pa-7CA" secondAttribute="bottom" constant="10" id="UdA-jz-ejU"/>
                                 <constraint firstItem="gYv-ae-9F5" firstAttribute="leading" secondItem="TUf-cT-ecW" secondAttribute="trailing" constant="5" id="VlX-dw-0LR"/>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="AgE-qS-WJw" secondAttribute="trailing" constant="16" id="bTg-FF-GhN"/>
-                                <constraint firstItem="kAv-pa-7CA" firstAttribute="top" secondItem="I2f-Fg-VtO" secondAttribute="bottom" constant="22.333333333333258" id="esV-uM-0Jj"/>
+                                <constraint firstItem="kAv-pa-7CA" firstAttribute="top" secondItem="I2f-Fg-VtO" secondAttribute="bottom" constant="20" id="esV-uM-0Jj"/>
                                 <constraint firstItem="I2f-Fg-VtO" firstAttribute="top" secondItem="gvi-P9-eMA" secondAttribute="top" constant="10.000000000000028" id="fmO-Td-lO4"/>
                                 <constraint firstItem="I2f-Fg-VtO" firstAttribute="centerX" secondItem="47p-qh-nLo" secondAttribute="centerX" id="hjO-Rw-l06"/>
                                 <constraint firstAttribute="trailing" secondItem="kAv-pa-7CA" secondAttribute="trailing" constant="16" id="i6o-uI-5Z8"/>
