--- a/MoviesApp/MoviesApp/Screens/Cells/Home/Shimmer/HomeScreenEnlargedShimmerCell.xib
+++ b/MoviesApp/MoviesApp/Screens/Cells/Home/Shimmer/HomeScreenEnlargedShimmerCell.xib
@@ -19,28 +19,28 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZqK-z5-WDQ" userLabel="Container View">
                         <rect key="frame" x="0.0" y="0.0" width="529" height="273"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nXy-OE-BQG" userLabel="View For Image">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nXy-OE-BQG" userLabel="View For Image" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                                 <rect key="frame" x="16" y="10" width="168.66666666666666" height="253"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="nXy-OE-BQG" secondAttribute="height" multiplier="2:3" id="Kb8-vb-XHv"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6M-na-3qf" userLabel="View 1">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6M-na-3qf" userLabel="View 1" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                                 <rect key="frame" x="204.66666666666666" y="86.666666666666671" width="314.33333333333337" height="30"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="S93-14-WzH"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c7d-wT-acR" userLabel="View 2">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c7d-wT-acR" userLabel="View 2" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                                 <rect key="frame" x="204.66666666666666" y="126.66666666666669" width="94.333333333333343" height="20"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="t4Z-U0-z8N"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZEp-Tg-k8g" userLabel="View 3">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZEp-Tg-k8g" userLabel="View 3" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                                 <rect key="frame" x="204.66666666666663" y="156.66666666666666" width="220" height="20"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
@@ -76,10 +76,10 @@
             <size key="customSize" width="529" height="273"/>
             <connections>
                 <outlet property="containerView" destination="ZqK-z5-WDQ" id="Ozq-F0-4ur"/>
-                <outletCollection property="shimmerContainerViews" destination="nXy-OE-BQG" collectionClass="NSMutableArray" id="ywm-Qr-LzD"/>
-                <outletCollection property="shimmerContainerViews" destination="e6M-na-3qf" collectionClass="NSMutableArray" id="KBI-7d-hfq"/>
-                <outletCollection property="shimmerContainerViews" destination="c7d-wT-acR" collectionClass="NSMutableArray" id="gFg-fn-Dud"/>
-                <outletCollection property="shimmerContainerViews" destination="ZEp-Tg-k8g" collectionClass="NSMutableArray" id="duj-qz-yRD"/>
+                <outletCollection property="shimmerViews" destination="nXy-OE-BQG" collectionClass="NSMutableArray" id="N13-5i-QKp"/>
+                <outletCollection property="shimmerViews" destination="e6M-na-3qf" collectionClass="NSMutableArray" id="gmz-kz-fWE"/>
+                <outletCollection property="shimmerViews" destination="c7d-wT-acR" collectionClass="NSMutableArray" id="RfR-TQ-8ZL"/>
+                <outletCollection property="shimmerViews" destination="ZEp-Tg-k8g" collectionClass="NSMutableArray" id="Dpx-s0-Y2A"/>
             </connections>
             <point key="canvasLocation" x="377.86259541984731" y="67.25352112676056"/>
         </collectionViewCell>
