--- a/MoviesApp/MoviesApp/Screens/MovieDetails/Shimmer/MovieDetailsShimmerView.xib
+++ b/MoviesApp/MoviesApp/Screens/MovieDetails/Shimmer/MovieDetailsShimmerView.xib
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x1W-QD-Mb3" userLabel="View Image">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x1W-QD-Mb3" userLabel="View Image" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                     <rect key="frame" x="59" y="69.000000000000028" width="275" height="412.66666666666674"/>
                     <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <constraints>
@@ -28,14 +28,14 @@
                         <constraint firstAttribute="height" constant="1" id="sCl-jP-6K3"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bM8-Aq-tcO" userLabel="View 1">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bM8-Aq-tcO" userLabel="View 1" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                     <rect key="frame" x="16" y="512.66666666666663" width="196.66666666666666" height="30"/>
                     <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="sh6-nK-js8"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="idp-B0-A0I" userLabel="View 2">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="idp-B0-A0I" userLabel="View 2" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                     <rect key="frame" x="16" y="562.66666666666663" width="314.33333333333331" height="128"/>
                     <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <constraints>
@@ -61,9 +61,9 @@
                 <constraint firstItem="bM8-Aq-tcO" firstAttribute="top" secondItem="nN4-VB-dnv" secondAttribute="bottom" constant="10" id="zZw-4b-OOJ"/>
             </constraints>
             <connections>
-                <outletCollection property="shimmerContainerViews" destination="x1W-QD-Mb3" collectionClass="NSMutableArray" id="XIc-Ci-cYH"/>
-                <outletCollection property="shimmerContainerViews" destination="bM8-Aq-tcO" collectionClass="NSMutableArray" id="EOm-Cn-K3K"/>
-                <outletCollection property="shimmerContainerViews" destination="idp-B0-A0I" collectionClass="NSMutableArray" id="E2E-aZ-q5V"/>
+                <outletCollection property="shimmerViews" destination="x1W-QD-Mb3" collectionClass="NSMutableArray" id="2Rc-X8-evq"/>
+                <outletCollection property="shimmerViews" destination="bM8-Aq-tcO" collectionClass="NSMutableArray" id="5wb-kt-RhN"/>
+                <outletCollection property="shimmerViews" destination="idp-B0-A0I" collectionClass="NSMutableArray" id="wgq-GZ-mdN"/>
             </connections>
             <point key="canvasLocation" x="132" y="-11"/>
         </view>
