--- a/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
+++ b/MoviesApp/MoviesApp/Screens/MovieDetails/Views/MovieDetailsViewController.xib
@@ -12,7 +12,7 @@
             <connections>
                 <outlet property="containerView" destination="47p-qh-nLo" id="3IB-Hb-WUg"/>
                 <outlet property="genresStackView" destination="AgE-qS-WJw" id="o29-JF-WAl"/>
-                <outlet property="movieImageShimmerContainerView" destination="ye0-4k-BfU" id="5rR-8J-ZEe"/>
+                <outlet property="movieImageShimmerView" destination="ye0-4k-BfU" id="Xzu-7l-fJh"/>
                 <outlet property="movieImageView" destination="I2f-Fg-VtO" id="niv-mX-W9t"/>
                 <outlet property="originalTitleLabel" destination="BdQ-z3-DGS" id="YOs-CW-Vkw"/>
                 <outlet property="originalTitleLabelHeightConstraint" destination="MKD-JD-JU5" id="Mz5-kA-Pju"/>
@@ -41,7 +41,7 @@
                                         <constraint firstAttribute="width" secondItem="I2f-Fg-VtO" secondAttribute="height" multiplier="2:3" id="EmB-93-SPY"/>
                                     </constraints>
                                 </imageView>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ye0-4k-BfU">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ye0-4k-BfU" customClass="ShimmerView" customModule="MoviesApp" customModuleProvider="target">
                                     <rect key="frame" x="59" y="69.000000000000028" width="275" height="412.66666666666674"/>
                                     <color key="backgroundColor" systemColor="secondaryLabelColor"/>
                                 </view>
