--- a/MoviesApp/MoviesApp/Screens/Cells/Home/View/HomeScreenCompactCell.xib
+++ b/MoviesApp/MoviesApp/Screens/Cells/Home/View/HomeScreenCompactCell.xib
@@ -57,7 +57,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="secondaryLabelColor"/>
+                        <color key="backgroundColor" systemColor="systemGray4Color"/>
                         <constraints>
                             <constraint firstItem="oMN-KB-xtC" firstAttribute="top" secondItem="ouP-LK-oc9" secondAttribute="top" constant="10" id="5u3-uy-fnX"/>
                             <constraint firstItem="ouP-LK-oc9" firstAttribute="height" secondItem="ngK-C5-OFi" secondAttribute="height" multiplier="0.7" id="Fia-SC-LOS"/>
@@ -90,8 +90,8 @@
     </objects>
     <resources>
         <image name="star" width="360" height="360"/>
-        <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
